// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PolicyDropdown component should hide policies that the user cant select 1`] = `
<SelectFieldWrapper
  label="Work level policy to apply to this PID"
  name="test"
  required={true}
  selectFieldId="test-policy"
  validation={
    Array [
      [Function],
    ]
  }
>
  <ForwardRef(MenuItem)
    disabled={false}
    key="0"
    value={1}
  >
    Administrators
  </ForwardRef(MenuItem)>
  <ForwardRef(MenuItem)
    disabled={false}
    key="1"
    value={2}
  >
    Theses Assessors
  </ForwardRef(MenuItem)>
  <ForwardRef(MenuItem)
    disabled={true}
    key="2"
    value={3}
  >
    Evidence Assessors
  </ForwardRef(MenuItem)>
  <ForwardRef(MenuItem)
    disabled={true}
    key="3"
    value={4}
  >
    Staff and Students
  </ForwardRef(MenuItem)>
  <ForwardRef(MenuItem)
    disabled={true}
    key="4"
    value={5}
  >
    Public
  </ForwardRef(MenuItem)>
</SelectFieldWrapper>
`;

exports[`PolicyDropdown component should render properly 1`] = `
<SelectFieldWrapper
  label="Work level policy to apply to this PID"
  name="test"
  required={true}
  selectFieldId="test-policy"
  validation={
    Array [
      [Function],
    ]
  }
>
  <ForwardRef(MenuItem)
    disabled={true}
    value=""
  />
  <ForwardRef(MenuItem)
    disabled={false}
    key="0"
    value={1}
  >
    Administrators
  </ForwardRef(MenuItem)>
  <ForwardRef(MenuItem)
    disabled={false}
    key="1"
    value={2}
  >
    Theses Assessors
  </ForwardRef(MenuItem)>
  <ForwardRef(MenuItem)
    disabled={false}
    key="2"
    value={3}
  >
    Evidence Assessors
  </ForwardRef(MenuItem)>
  <ForwardRef(MenuItem)
    disabled={false}
    key="3"
    value={4}
  >
    Staff and Students
  </ForwardRef(MenuItem)>
  <ForwardRef(MenuItem)
    disabled={false}
    key="4"
    value={5}
  >
    Public
  </ForwardRef(MenuItem)>
</SelectFieldWrapper>
`;
